# rust-getting-started

./: .gitignore  Rust-presentation.odp
hello-cargo/: Cargo.toml
hello-cargo/src/: main.rs
rust-example/: Cargo.toml
rust-example/src/concurrency/: main.rs
rust-example/src/functional/: main.rs
rust-example/src/oop/: main.rs
